--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center>
-	<div style="margin-top:200px;padding:100px;border-radius:10px;background-color:#fcfcfc;>
+	<div style="margin-top:200px;padding:100px;border-radius:10px;background-color:#fcfcfc;">
 		<h1>Jacobs fina testsida</h1>
 		<p>Denna sida används för att testa git wohoooo!</p>
 	</div>
